more determinism
