# reposerver/repository/repository.go
@@ -1118,11 +1118,29 @@ func helmTemplate(appPath string, repoRoot string, env *v1alpha1.Env, q *apiclie
 	// templating, thus, we just use the name part of the identifier.
 	appName, _ := argo.ParseInstanceName(q.AppName, "")
 
+	// If the API versions are not set in the application source, use the ones from the request.
+	var apiVersions []string
+	if q.ApplicationSource.Helm != nil {
+		apiVersions = q.ApplicationSource.Helm.ApiVersions
+	}
+	if len(apiVersions) == 0 {
+		apiVersions = q.ApiVersions
+	}
+
+	// If the Kube version is not set in the application source, use the one from the request.
+	kubeVersion := ""
+	if q.ApplicationSource.Helm != nil {
+		kubeVersion = q.ApplicationSource.Helm.KubeVersion
+	}
+	if kubeVersion == "" {
+		kubeVersion = q.KubeVersion
+	}
+
 	templateOpts := &helm.TemplateOpts{
 		Name:        appName,
 		Namespace:   q.Namespace,
-		KubeVersion: text.SemVer(q.KubeVersion),
-		APIVersions: q.ApiVersions,
+		KubeVersion: text.SemVer(kubeVersion),
+		APIVersions: apiVersions,
 		Set:         map[string]string{},
 		SetString:   map[string]string{},
 		SetFile:     map[string]pathutil.ResolvedFilePath{},
@@ -1393,6 +1411,7 @@ func GenerateManifests(ctx context.Context, appPath, repoRoot, revision string, 
 
 	env := newEnv(q, revision)
 
+	// This call mutates q.ApplicationSource to apply overrides
 	appSourceType, err := GetAppSourceType(ctx, q.ApplicationSource, appPath, repoRoot, q.AppName, q.EnabledSourceTypes, opt.cmpTarExcludedGlobs, env.Environ())
 	if err != nil {
 		return nil, fmt.Errorf("error getting app source type: %w", err)
